--- a/src/styles.css
+++ b/src/styles.css
@@ -153,13 +153,18 @@ body {
   justify-content: center;
   align-items: center;
   gap: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .social-link {
   color: #374151;
   transition: color 0.3s;
   text-decoration: none;
+}
+
+.social-link-hover {
+  color: var(--accent-pink);
 }
 
 .social-link:hover {
