--- a/src/styles.css
+++ b/src/styles.css
@@ -1049,8 +1049,8 @@ body {
 
 .floating-ball {
   position: fixed;
-  left: 16px;
-  bottom: 16px;
+  right: 16px;
+  bottom: 32px;
   width: 50px;
   height: 50px;
   background: linear-gradient(45deg, #00bfff, #ff69b4);
@@ -1132,4 +1132,14 @@ body {
 
 .bottom-section.flipped{
   transform: rotateY(180deg);
+}
+
+@media (max-width: 512px) {
+  .education-container .content-card{
+    display: block;
+  }
+
+  .certifications-container .content-card{
+    display: block;
+  }
 }
